@@ -14,10 +14,7 @@ import com.jdc.recipe_service.exception.CustomException;
 import com.jdc.recipe_service.exception.ErrorCode;
 import com.jdc.recipe_service.mapper.CommentMapper;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -107,81 +104,102 @@ public class CommentService {
 
 
     public Page<CommentDto> getAllCommentsWithLikes(Long recipeId, Long currentUserId, Pageable pageable) {
-        List<RecipeComment> comments = recipeCommentRepository.findAllTopLevelComments(recipeId);
+        // 1) 저장소 조회: page/size 만 복사하고 정렬 정보는 제거
+        Pageable repoPg = PageRequest.of(
+                pageable.getPageNumber(),
+                pageable.getPageSize()
+        );
 
-        List<Long> allCommentIds = comments.stream()
+        List<RecipeComment> comments = recipeCommentRepository
+                .findAllWithRepliesAndUsers(recipeId, repoPg);
+
+        if (comments.isEmpty()) {
+            return new PageImpl<>(List.of(), pageable, 0);
+        }
+
+        // 2) 댓글 + 대댓글 전체 ID 수집
+        List<Long> allIds = comments.stream()
                 .flatMap(c -> Stream.concat(
                         Stream.of(c.getId()),
                         c.getReplies().stream()
-                                .filter(reply -> !reply.isDeleted())
+                                .filter(r -> !r.isDeleted())
                                 .map(RecipeComment::getId)
                 ))
                 .toList();
 
-        Map<Long, Integer> likeCounts = commentLikeRepository.countLikesByCommentIds(allCommentIds).stream()
+        // 3) 좋아요 카운트 조회
+        Map<Long, Integer> likeCountMap = commentLikeRepository
+                .countLikesByCommentIds(allIds).stream()
                 .collect(Collectors.toMap(
                         CommentLikeCountProjection::getCommentId,
                         CommentLikeCountProjection::getLikeCount
                 ));
 
-        Set<Long> likedCommentIds = commentLikeRepository.findLikedCommentIdsByUser(currentUserId, allCommentIds)
-                .stream()
-                .collect(Collectors.toSet());
+        // 4) 현재 사용자가 좋아요 누른 댓글 ID 조회
+        Set<Long> likedByUser = new HashSet<>(
+                commentLikeRepository.findLikedCommentIdsByUser(currentUserId, allIds)
+        );
 
-        List<CommentDto> commentDtos = comments.stream().map(comment -> {
-            List<CommentDto> replies = comment.getReplies().stream()
-                    .filter(reply -> !reply.isDeleted())
-                    .map(reply -> CommentMapper.toReplyDto(
-                            reply,
-                            likedCommentIds.contains(reply.getId()),
-                            likeCounts.getOrDefault(reply.getId(), 0)
-                    ))
-                    .toList();
+        // 5) DTO 변환 (reply 포함)
+        List<CommentDto> dtos = comments.stream()
+                .map(comment -> {
+                    // 대댓글 DTO
+                    List<CommentDto> replies = comment.getReplies().stream()
+                            .filter(r -> !r.isDeleted())
+                            .map(r -> CommentMapper.toReplyDto(
+                                    r,
+                                    likedByUser.contains(r.getId()),
+                                    likeCountMap.getOrDefault(r.getId(), 0)
+                            ))
+                            .toList();
 
-            boolean isDeleted = comment.isDeleted();
-            boolean hasReplies = !replies.isEmpty();
+                    boolean isDeleted = comment.isDeleted();
+                    boolean hasReplies = !replies.isEmpty();
 
-            if (isDeleted && hasReplies) {
-                return CommentMapper.toDeletedDto(comment).toBuilder()
-                        .replies(replies)
-                        .replyCount(replies.size())
-                        .build();
-            } else if (isDeleted) {
-                return null;
-            } else {
-                return CommentMapper.toDto(
-                                comment,
-                                likedCommentIds.contains(comment.getId()),
-                                likeCounts.getOrDefault(comment.getId(), 0)
-                        ).toBuilder()
-                        .replies(replies)
-                        .replyCount(replies.size())
-                        .build();
-            }
-        }).filter(Objects::nonNull).toList();
+                    if (isDeleted && hasReplies) {
+                        return CommentMapper.toDeletedDto(comment)
+                                .toBuilder()
+                                .replies(replies)
+                                .replyCount(replies.size())
+                                .build();
+                    } else if (isDeleted) {
+                        return null; // 완전 삭제
+                    } else {
+                        return CommentMapper.toDto(
+                                        comment,
+                                        likedByUser.contains(comment.getId()),
+                                        likeCountMap.getOrDefault(comment.getId(), 0)
+                                ).toBuilder()
+                                .replies(replies)
+                                .replyCount(replies.size())
+                                .build();
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
 
-        // 🔥 정렬 처리
-        List<CommentDto> sorted = new ArrayList<>(commentDtos);
-        if (!pageable.getSort().isEmpty()) {
+        // 6) 애플리케이션 레벨 정렬
+        List<CommentDto> sorted = new ArrayList<>(dtos);  // mutable copy
+        if (pageable.getSort().isSorted()) {
             Sort.Order order = pageable.getSort().iterator().next();
-            if ("likeCount".equals(order.getProperty())) {
-                sorted.sort(Comparator.comparing(CommentDto::getLikeCount,
-                        order.isAscending() ? Comparator.naturalOrder() : Comparator.reverseOrder()));
-            } else { // 기본 createdAt
-                sorted.sort(Comparator.comparing(CommentDto::getCreatedAt,
-                        order.isAscending() ? Comparator.naturalOrder() : Comparator.reverseOrder()));
+            Comparator<CommentDto> comp = "likeCount".equals(order.getProperty())
+                    ? Comparator.comparing(CommentDto::getLikeCount)
+                    : Comparator.comparing(CommentDto::getCreatedAt);
+            if (!order.isAscending()) {
+                comp = comp.reversed();
             }
+            sorted.sort(comp);  // 이제 예외 없이 정렬됩니다
         }
 
-        // 🔥 페이지네이션 적용
+        // 7) 페이징에도 `sorted` 를 사용
         int start = (int) pageable.getOffset();
-        int end = Math.min((start + pageable.getPageSize()), sorted.size());
-
-        List<CommentDto> pageContent = start > sorted.size() ? Collections.emptyList() : sorted.subList(start, end);
+        int end = Math.min(start + pageable.getPageSize(), sorted.size());
+        List<CommentDto> pageContent = start >= sorted.size()
+                ? List.of()
+                : sorted.subList(start, end);
 
         return new PageImpl<>(pageContent, pageable, sorted.size());
     }
-
 
 
     @Transactional
